#42 fix dark mode table styling

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -242,5 +242,4 @@ td:first-child {
   position: sticky;
   left: 0;
   z-index: 1;
-  background-color: white;
 }
